samples/_failures_safe/1761651881_64a614_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3edfab7b.c:182:1: error: expected declaration specifiers or ‘...’ at end of input
  182 | void print_token_type(
      | ^~~~
